--- a/index.html
+++ b/index.html
@@ -5,29 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="style.css" type="text/css" rel="stylesheet"/>
+  <script src"https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="script.js"/></script>
   <title>Wack-A-Mole</title>
 </head>
 <body>
 
   <h1>Wack-A-Mole</h1>
-
+  <button id="initiator">Begin</button>
 
 <div class="game_container">
   <table>
     <tr>
-      <td><img src="noMole.jpg"/></td>
-      <td ><img src="noMole.jpg"/></td>
-      <td ><img src="noMole.jpg"/></td>
+      <td class="game_tile"><img src="noMole.jpg"/></td>
+      <td class="game_tile"><img src="noMole.jpg"/></td>
+      <td class="game_tile"><img src="noMole.jpg"/></td>
     </tr>
     <tr>
-      <td ><img src="noMole.jpg"/></td>
-      <td ><img src="noMole.jpg"/></td>
-      <td ><img src="noMole.jpg"/></td>
+      <td class="game_tile"><img src="noMole.jpg"/></td>
+      <td class="game_tile"><img src="noMole.jpg"/></td>
+      <td class="game_tile"><img src="noMole.jpg"/></td>
     </tr>
     <tr>
-      <td ><img src="noMole.jpg"/></td>
-      <td ><img src="noMole.jpg"/></td>
-      <td ><img src="noMole.jpg"/></td>
+      <td class="game_tile"><img src="noMole.jpg"/></td>
+      <td class="game_tile"><img src="noMole.jpg"/></td>
+      <td class="game_tile"><img src="noMole.jpg"/></td>
     </tr>
   </table>
 </div>
