Added onclick eventhandler to game tiles

--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
 <div class="game_container">
   <table>
     <tr>
-      <td class="game_tile"><img src="noMole.jpg"/></td>
-      <td class="game_tile"><img src="noMole.jpg"/></td>
-      <td class="game_tile"><img src="noMole.jpg"/></td>
+      <td class="gameTile"></td>
+      <td class="gameTile"></td>
+      <td class="gameTile"></td>
     </tr>
     <tr>
-      <td class="game_tile"><img src="noMole.jpg"/></td>
-      <td class="game_tile"><img src="noMole.jpg"/></td>
-      <td class="game_tile"><img src="noMole.jpg"/></td>
+    <td class="gameTile"></td>
+    <td class="gameTile"></td>
+    <td class="gameTile"></td>
     </tr>
     <tr>
-      <td class="game_tile"><img src="noMole.jpg"/></td>
-      <td class="game_tile"><img src="noMole.jpg"/></td>
-      <td class="game_tile"><img src="noMole.jpg"/></td>
+    <td class="gameTile"></td>
+    <td class="gameTile"></td>
+    <td class="gameTile"></td>
     </tr>
   </table>
 </div>
