Added start/stop button to game

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 
   <h1>Wack-A-Mole</h1>
-  <button id="initiator">Begin</button>
+
+  <button id="start">Begin</button>
+  <button id="stop">Stop</button>
 
 <div class="game_container">
   <table>
