fixed display of final score

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
 
-
     <div id="game_container">
       <h1 id="containerhead">Wack-A-Mole</h1>
 
@@ -21,7 +20,8 @@
       <button id="stop" class="gameButtons">Stop</button>
       <div>
       <h3>Score:</h3>
-      <div id="score">0</div>
+      <div id="minusPoint"></div>
+      <div id="score"></div>
       </div>
     </div>
 
